# magmeas

./: .buildinfo  .gitignore  CITATION.cff  LICENSE  README.md  api_ref.html  genindex.html  index.html  magmeas.html  magmeas.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: python-package.yml  sphinx.yaml  test.yml
_modules/: index.html
_modules/magmeas/: base.html
_modules/mammos_entity/: _entity_collection.html
_sources/notebooks/: getting_started.ipynb.txt
docs/: api_ref.rst  conf.py  index.rst  magmeas.rst
notebooks/: getting_started.html
src/magmeas/: __init__.py  _base.py  base.py  cli.py  magmeas.py  utils.py
src/magmeas/data/: __init__.py
tests/: test_internal.py  test_io.py  test_plotting.py  test_vsm.py
