[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "magmeas"
description = "Functionality for handling magnetometry data of permanent magnets."
requires-python = ">= 3.6"
dependencies = [
    "numpy",
	"pandas",
	"matplotlib",
	"scipy",
	"h5py",
	"mammos-entity >= 0.10.0",
	"mammos-analysis"
]
authors = [
  {name = "Jonas Winkler", email = "j.winkler@ifw-dresden.de"},
    {name = "The magmeas Developers"}
]
maintainers = [
  {name = "Jonas Winkler", email = "j.winkler@ifw-dresden.de"}
]
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]

[project.readme]
'file' = "README.md"
'content-type' = "text/markdown"

[project.urls]
"Source" = "https://github.com/jwinkler29/magmeas.git"
"Bug Tracker" = "https://github.com/jwinkler29/magmeas.git/issues"

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit >= 1.16"
]

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # Pyflakes
  "I",   # isort
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
]
ignore = [
  # conflict with other rules
  "D203", # one-blank-line-before-class (conflicts with D204)
  "D212", # multi-line-summary-first-line (conflicts with D213)
  # conflict with formatter
  "D206", # indent-with-spaces
  "D300", # triple-single-quotes
  "E111", # indentation-with-invalid-multiple
  "E114", # indentation-with-invalid-multiple-comment
  "E117", # over-indented
  # conflict with Python 3.6 compatibility
  "UP022", # replace-stdout-stderr
  # personal preference
  "SIM108", # turnary operator instead of if else block
  "D205", # one-blank-line-required-between-summary-line-and-description
]

[tool.ruff.lint.isort]
known-local-folder = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[project.scripts]
magmeas = "magmeas.cli:cli"

[tool.setuptools.dynamic]
version = {attr = "magmeas.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
